--- a/client/public/index.html
+++ b/client/public/index.html
@@ -26,5 +26,28 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+    <script src="https://www.gstatic.com/firebasejs/8.2.7/firebase-app.js"></script>
+
+    <!-- TODO: Add SDKs for Firebase products that you want to use
+        https://firebase.google.com/docs/web/setup#available-libraries -->
+    <script src="https://www.gstatic.com/firebasejs/8.2.7/firebase-analytics.js"></script>
+
+    <script>
+      // Your web app's Firebase configuration
+      // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+      var firebaseConfig = {
+        apiKey: "AIzaSyB_muaG0iF_R6K9VD8hpoOUwxG5vD3vQHo",
+        authDomain: "musemood.firebaseapp.com",
+        projectId: "musemood",
+        storageBucket: "musemood.appspot.com",
+        messagingSenderId: "292979873538",
+        appId: "1:292979873538:web:588fda44bd433298d2141b",
+        measurementId: "G-MH374W3B1N"
+      };
+      // Initialize Firebase
+      firebase.initializeApp(firebaseConfig);
+      firebase.analytics();
+    </script>
   </body>
 </html>
