--- a/client/public/index.html
+++ b/client/public/index.html
@@ -11,7 +11,7 @@
     />
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;800&display=swap" rel="stylesheet">
-    <title>Mood Muse</title>
+    <title>Melodica</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
